# zirco-auto-cloudflare-bl

./: .envrc  .gitignore  Cargo.toml  LICENSE  flake.nix
.sqlx/: query-047120c682d9604a9fcd5651879382f6f5d6ece641f7fef007dd8871549657bc.json  query-23480111a5347b7994b9ed35886931a6b728ed7b64b114a66808eb793d035486.json  query-da1582d983f65db494dd74922bb003c2844f2848f5ee906f885b2f310e154286.json  query-e39f0499ed692bbf94a4593d54a8932615cd25b12a007971b8ba743fa97af1a3.json  query-f8b064616ae22749132416ca543b521b24cc2f12d0eaea079dd6befca9221d4f.json
src/: delegation.rs  destinations.rs  main.rs  ranges.rs
