[package]
name = "zirco-auto-cloudflare-bl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
futures = "0.3.32"
hickory-resolver = "0.25.2"
ipnet = "2.11.0"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["native-tls"] }
once_cell = "1.21.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
